# home-ops

./: .brewfile  .envrc  .gitignore  .renovaterc.json5  .sops.yaml  README.md  Taskfile.yaml  clusterhosts  go.mod  go.sum  kube.cue  mise.toml  pyproject.toml  test
.github/: labeler.yaml  labels.yaml  renovate.json5
.github/renovate/: autoMerge.json5  commitMessage.json5  customManagers.json5  grafanaDashboards.json5  groups.json5  labels.json5  packageRules.json5  semanticCommits.json5
.github/workflows/: flux-diff.yaml  flux-local.yaml  octodns-preview.yaml  octodns-sync.yaml  renovate.yaml  schemas.yaml
.renovate/: autoMerge.json5  customManagers.json5  grafanaDashboards.json5  groups.json5  semanticCommits.json5
.task/bootstrap/: Taskfile.yaml
.task/talos/: Taskfile.yaml
.task/volsync/: Taskfile.yaml
.taskfiles/: TalosTasks.yaml
.taskfiles/Cue/: taskfile.yaml
.taskfiles/Flux/: Taskfile.yaml
.taskfiles/Infra/: Taskfile.yaml
.taskfiles/Kubernetes/: Taskfile.yaml
.taskfiles/Talos/: Taskfile.yaml
.taskfiles/Workstation/: Brewfile.lock.json
.taskfiles/rook/: Taskfile.yaml
ansible/inventory/: hosts.yaml
bootstrap/: Taskfile.yaml  helmfile.yaml  resources.yaml
bootstrap/helmfile.d/: 00-crds.yaml  01-apps.yaml
docker/nas/: .doco-cd.yaml  .env
infra/dnscontrol/: creds.json  dnsconfig.js  types-dnscontrol.d.ts
kubernetes/: Taskfile.yaml
octodns/: config.yaml  conftest.py
scripts/: kubeconform.sh
talos/: Taskfile.yaml  talconfig.yaml  talsecret.sops.yaml  talsecret.tmpl.yaml
talos/cni/: values.yaml
temp/: k8s_defs.cue  kube.cue
(+890 files in other folders)
