[project]
name = "home-ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=13.5.0",
    "ansible-dev-tools>=26.3.1",
    "ansible-lint>=26.4.0",
    "github3.py>=4.0.1"
]

[project.optional-dependencies]
octodns = [
  "octodns~=1.16.0",
  "octodns-cloudflare~=1.0.0"
]

